Uploaded image for project: 'Core ReactOS'
  1. Core ReactOS
  2. CORE-11857

[CMD] Problem with the extended variable %~d0

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • Major
    • 0.4.15
    • Shell
    • None

    Description

      The variable %~d0 (= current drive) does not work in cmd:

      @echo %~d0

      The %~d0 should give the current drive letter.
      as example working with removable drive or in batch files.

      best regards
      Blacky

      Attachments

        1. Test_in_windows.JPG
          40 kB
          amber
        2. Test_in_ROS.JPG
          44 kB
          amber
        3. Screen 00001.jpg
          162 kB
          Blackcrack

        Issue Links

          Activity

            People

              hbelusca hbelusca
              Blackcrack Blackcrack
              Votes:
              3 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: